--- a/css/style.css
+++ b/css/style.css
@@ -186,9 +186,26 @@ input {
 }
 
 button {
-
+  background-color:#c4bdb3;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #c4bdb3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px 30px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #c4bdb3;
 }
 
 button:hover {
+  background-color:#ba766d;
+}
 
+button:active {
+  position:relative;
+  top:1px;
 }
