--- a/css/onepage-scroll.css
+++ b/css/onepage-scroll.css
@@ -1,5 +1,6 @@
 body, html {
   margin: 0;
+  margin-left: 10px;
   overflow: hidden;
   -webkit-transition: opacity 400ms;
   -moz-transition: opacity 400ms;
@@ -26,13 +27,12 @@ body, .onepage-wrapper, html {
 .onepage-wrapper .section {
   width: 100%;
   height: 100%;
-  transition: margin-left .5s;
 }
 
 .onepage-pagination {
   position: absolute;
-  right: 10px;
-  top: 50%;
+  right: 30px;
+  top: 40%;
   z-index: 5;
   list-style: none;
   margin: 0;
