--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   display: block;
-  margin-left: 10px;
+  margin-left: 15px;
   height: 100%;
   background-color: #fffafa;
 }
@@ -51,6 +51,7 @@ p {
 .header {
   font-family: 'Roboto', sans-serif;
     width: 100%;
+    padding-top: 20px;
     margin: 0 auto;
     height: 118px;
     /* background: black; */
@@ -74,7 +75,6 @@ p {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     letter-spacing: 0px;
-    /* background-image: url(logo.png); */
     /* background-size: cover; */
     /* color: white; */
     height: 72px;
@@ -99,6 +99,7 @@ p {
 .hintergrund {
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-left: 20px;
   /* background-color: #F0FFF0; */
 }
 
@@ -147,10 +148,6 @@ p {
   transition: margin-left .5s;
   padding: 20px;
   object-position: center;
-}
-
-section {
-  transition: margin-left .5s;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
