--- a/css/onepage-scroll.css
+++ b/css/onepage-scroll.css
@@ -61,8 +61,8 @@ body, .onepage-wrapper, html {
 .onepage-pagination li a.active:before{
   width: 10px;
   height: 10px;
-  background: green;
-  border: 1px solid green;
+  background: #f2f2f2;
+  border: 1px solid #f2f2f2;
   margin-top: -4px;
   left: 8px;
 }
