--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ canvas {
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
+  margin-left: 30px;
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-style: italic;
   margin-left: 30px;
 }
@@ -222,6 +223,6 @@ button:active {
   top:1px;
 }
 
-img:hover {
+.imageContainer > img:hover {
   transform: scale(1.5);
 }
