--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,18 @@ h2 {
   font-family: 'Lato', sans-serif;
   font-style: italic;
   margin-left: 30px;
+  text-align: justify;
+  padding-right: 800px;
 }
 
 img {
   padding-right: 10px;
   margin-left: auto;
   margin-right: auto
+}
+
+a:visited {
+  text-decoration: none;
 }
 
 
@@ -65,10 +71,6 @@ p {
     text-align: center;
     background-color: #fffafa;
     }
-
-#blabla {
-    background-image: url("images/logo.png");
-}
 
 .header-link {
     font-size: 22px;
